使用 Colaboratory 建立

--- a/Dex_data_classification_using_signature.ipynb
+++ b/Dex_data_classification_using_signature.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMraadS/NrVBa5ll2zHseZH",
+      "authorship_tag": "ABX9TyMEvKZpRx3UXDgNadDs0ETT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Introduction**\n",
+        "# **Introduction**"
+      ],
+      "metadata": {
+        "id": "mlP3SRjaH8Qy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "The interpretation and management of streamed data has become an important area of research for the computer science, database, and statistics communities. Signature as data transform maps multi-dimensional paths to the sequence of their iterated integrals.\n",
         "\\\n",
         "We treat signatures as features in this method. Then, we use the binary classifier to distinguish different time intervals. This is the first step towards the signature trading strategies."
@@ -51,33 +59,39 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Signature**\n",
-        "#### **Definition**\n",
-        "For a path $X: [a,b] \\to \\mathbb{R^d}$, recall that we denote the coordinate paths by $(X^1_t,...X^d_t)$, where each $X^i:[a,b]\\to\\mathbb{R}$ is a real-valued path. For any singla index $i∈${$1,...,d$}, let us define thequantity\\\n",
-        "$S(X)^i_{a,t} =  \\int_{a<s<t}  \\,dX^i_s = X^i_t-X^i_0,$\\\n",
-        "\\\n",
-        "Now for any pair $i,j∈${$1,...,d$}, let us define the *double-iterated integral*\n",
-        "$S(X)^{i,j}_{a,t} =  \\int_{a<s<t}S(X)^i_{a,s}  \\,dX^j_s =\\int_{a<r<s<t}\\,dX^i_rdX^j_s ,$\\\n",
-        "\\\n",
-        "The real numbr $S(X)^{i_1,...,i_k}_{a,t}$ is called the k-fold iterated integral of X along indexes $i_1,...,i_k$: $S(X)^{i_1,...,i_k}_{a,t} = \\int_{a<t_k<t}...∫_{a<t_1<t_2}dX^{i_1}_{t_1}...dX^{i_k}_{t_k}$\\\n",
-        "\\\n",
-        "**Definition** (Signature). The *signature* of a path $X:[a,b]\\to \\mathbb{R}^d,$ denoted by $S(X)_{a,b}$, is the collection (infinite series) of all the iterated integrals of $X$. Fromally, $S(X)_{a,b}$ is the sequence of real numbers\n",
-        "$S(X)_{a,b} = (1,S(X)^1_{a,b},...,S(X)^d_{a,b},S(X)^{1,1}_{a,b},S(X)^{1,2}_{a,b},...)$\n",
+        "# **Signature**"
+      ],
+      "metadata": {
+        "id": "LCxyXYIyHvtb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Definition**\n",
+        "For a path $X: [a,b] \\to \\mathbb{R^d}$, recall that we denote the coordinate paths by $(X^1_t,...X^d_t)$, where each $X^i:[a,b] \\rightarrow \\mathbb{R}$ is a real-valued path. For any singla index $i \\in \\{1,...,d\\}$, we define\n",
         "\n",
-        "\\\n",
-        "#### **Properties**\n",
-        "- **Invariance under Time Reparametrisations**\\\n",
-        "The signature of a path (a record of its movements) remains the same regardless of how we stretch or compress the time axis.\n",
-        "- **Shuffle Product**\\\n",
-        "The shuffle product is a way to combine the signatures of two different paths in a systematic manner.\n",
-        "- **Chen’s Identity**\\\n",
-        "Chen's identity is a mathematical equation that relates the signature of a path to its iterated integrals. It's a fundamental equation in the theory of signatures\n",
-        "- **Time-reversal**\\\n",
-        "Time-reversal is a property where reversing the order of a path's movements doesn't change its signature.\n",
-        "- **Log Signature**\\\n",
-        "The log signature is a way to transform a signature into a more manageable format. It's useful for simplifying calculations involving signatures.\n",
-        "- **Uniqueness**\\\n",
-        "The uniqueness property means that every path has a unique signature associated with it. No two distinct paths should have the same signature."
+        "$$\n",
+        "S(X)^i_{a,t} =  \\int_{a<s<t}  dX^i_s = X^i_t-X^i_0\n",
+        "$$\n",
+        "\n",
+        "Now for any pair $i,j \\in \\{1,...,d\\}$, we define the *double-iterated integral*\n",
+        "\n",
+        "$$\n",
+        "S(X)^{i,j}_{a,t} =  \\int_{a<r<s<t}\\,dX^i_rdX^j_s\n",
+        "$$\n",
+        "\n",
+        "The real numbr $S(X)^{i_1,...,i_k}_{a,t}$ is called the k-fold iterated integral of X along indexes $i_1,...,i_k$:\n",
+        "\n",
+        "$$\n",
+        "S(X)^{i_1,...,i_k}_{a,t} = \\int_{a<t_k<t}...∫_{a<t_1<t_2}dX^{i_1}_{t_1}...dX^{i_k}_{t_k}\n",
+        "$$\n",
+        "\n",
+        "**Definition** (Signature). The *signature* of a path $X:[a,b]\\to \\mathbb{R}^d,$ denoted by $S(X)_{a,b}$, is the collection (infinite series) of all the iterated integrals of $X$. Fromally, $S(X)_{a,b}$ is the sequence of real numbers\n",
+        "\n",
+        "$$\n",
+        "S(X)_{a,b} = (1,S(X)^1_{a,b},...,S(X)^d_{a,b},S(X)^{1,1}_{a,b},S(X)^{1,2}_{a,b},...)\n",
+        "$$"
       ],
       "metadata": {
         "id": "P05jijhB1kjV"
@@ -86,7 +100,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Application**\n",
+        "# **Application**"
+      ],
+      "metadata": {
+        "id": "dp303YtdIP37"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "We explore to what extent the signatures of 30-minute data streams determine the time bucket they are sampled from. In particular, we run binary classification on various pairs of time intervals, and explore which time buckets show similar behaviour and which time buckets have unique characteristics.\n",
         "## **Data**\n",
         "We used Uniswap v3 WETH/USDC(0.05%) pool on Mainnet from 2021/5/5 to 2022/9/24.\n",
@@ -396,38 +418,41 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### **Lead-lag Transformation**\n",
+        "## **Lead-lag Transformation**\n",
         "\n",
-        "In particular, given a stream $\\left( \\widehat{X_{ti}}\\right)^N_{i=0}$ in $\\mathbb{R}^d$, we define its lead-transformed stream $\\left ( \\widehat{X}^{lead}_{ti}\\right)^{2N}_{j=0}$ by\\\n",
+        "In particular, given a stream $\\left( \\widehat{X}_{t_i}\\right)^N_{i=0} \\in \\mathbb{R}^d$, we define\n",
         "\n",
-        "  $ \\widehat{X}^{lead}_j\\begin{cases}\n",
-        "        \\widehat{X}_{ti}\\;if j = 2i \\\\\n",
-        "        \\widehat{X}_{ti}\\;if j = 2i-1\n",
+        "- its lead-transformed stream $\\left( \\widehat{X}^{lead}_{j} \\right)^{2N}_{j=0}$ by\n",
+        "\n",
+        "\\begin{eqnarray*}\n",
+        "\\widehat{X}^{lead}_j =\n",
+        "\\begin{cases}\n",
+        "        \\widehat{X}_{t_i} \\text{ if } j = 2i \\\\\n",
+        "        \\widehat{X}_{t_i} \\text{ if }  j = 2i-1\n",
         "    \\end{cases}\n",
-        "  $\\\n",
-        "  \\\n",
-        "  Moreover, we define its lag-transformed stream $\\left ( \\widehat{X}^{lag}_{ti}\\right)^{2N}_{j=0}$ by\\\n",
-        "  $ \\widehat{X}^{lag}_j\\begin{cases}\n",
-        "        \\widehat{X}_{ti}\\;if j = 2i \\\\\n",
-        "        \\widehat{X}_{ti}\\;if j = 2i+1\n",
+        "\\end{eqnarray*}\n",
+        "\n",
+        "- its lag-transformed stream $\\left ( \\widehat{X}^{lag}_{j}\\right)^{2N}_{j=0}$ by\n",
+        "\n",
+        "\\begin{eqnarray*}\n",
+        "\\widehat{X}^{lag}_j =\n",
+        "\\begin{cases}\n",
+        "        \\widehat{X}_{t_i} \\text{ if } j = 2i \\\\\n",
+        "        \\widehat{X}_{t_i} \\text{ if }  j = 2i+1\n",
         "    \\end{cases}\n",
-        "  $\\\n",
-        "  \\\n",
+        "\\end{eqnarray*}\n",
+        "\n",
         "Example:\n",
-        "$X:(0,1,2,3,4,5)$\\\n",
-        "$X^{lead}:(0,1,1,2,2,3,3,4,4,5,5)$\\\n",
-        "$X^{lag}:(0,0,1,1,2,2,3,3,4,4,5)$\n",
+        "$X:(0,1,2,3,4,5)$ Lead-lag transformation:\n",
+        "\\begin{eqnarray*}\n",
+        "\\ X^{lead}:(0,1,1,2,2,3,3,4,4,5,5)\\\\\n",
+        " X^{lag}:(0,0,1,1,2,2,3,3,4,4,5)\n",
+        "\\end{eqnarray*}\n",
+        "In our setting, $\\widehat{X} := \\left(u_{t_i},p_{t_i},d_{t_i},c_{t_i} \\right)^N_{i=0}$. In order to capture the quadratic variation of the log-price, the lead-transform $\\widehat{X}^{lead}$ is computed and is paired with the lag-transform of $p$; hence, the input streams are of the form:\n",
         "\n",
-        "\n",
-        "\n",
-        "\\\n",
-        "We define $\\widehat{X} := \\left(u_{ti},p_{ti},d_{ti},c_{ti} \\right)^N_{i=0}$.\\\n",
-        "  In order to capture the quadratic variation of the log-price, the lead-transform $\\widehat{X}^{lead}$ is computed and is paired with the lag-transform of $p$; hence, the input streams are of theform:\\\n",
-        "$\\left( \\widehat{Z}_{j} \\right)^{2N}_{j=0}:=\\left(u^{lead}_{j},p^{lead}_{j},d^{lead}_{j},c^{lead}_{j}, p^{lag}_{j} \\right)^{2N}_{j=0}$\n",
-        "\n",
-        "\\\n",
-        "#### **Signature Calculating**\n",
-        "We compute the signature of each stream up to depth 4, that is for all iterated integrals that are indexed with multi-indices of length at most 4. The signatures are computed with the **iisignature** Python package."
+        "$$\n",
+        "\\left( \\widehat{Z}_j \\right)^{2N}_{j=0}:= \\left(u^{lead}_{j},p^{lead}_{j},d^{lead}_{j},c^{lead}_{j}, p^{lag}_{j}\\right)^{2N}_{j=0}\n",
+        "$$\n"
       ],
       "metadata": {
         "id": "Kk8-5d1b-TM7"
@@ -501,7 +526,9 @@
         "\\\n",
         "Then we used the LASSO for classification:\n",
         "\n",
-        "$\\min\\limits_{β} \\left[ \\sum\\limits_{k=1}^K \\left( \\sum\\limits_{I∈{I_m}}β_IZ^I_{0,2N_K}(k)-y(k) \\right)^2+α∑\\limits_{I∈I_m}|β_I|\\right],$\\\n",
+        "$$\n",
+        "\\min\\limits_{\\beta} \\left[ \\sum\\limits_{k=1}^K \\left( \\sum\\limits_{I \\in {I_m}}\\beta_I Z^I_{0,2N_K}(k)-y(k) \\right)^2+ \\alpha \\sum\\limits_{I \\in I_m} | \\beta_I | \\right],\n",
+        "$$\n",
         "\\\n",
         "where $I_m$ denotes the set of multi-indices of length at most m, $β=(β_I)_{I∈I_m}$, $K$ denotes the cardinality of the learning set, $Z(k)$ denotes the axis path corresponding to the $k$th input stream $(\\widehat{Z_i})^{2N_k}_{i=0}(k)$, $y(k)$ denotes the category (0 or 1) of the $k$th input stream, and $α$ is the shrinkage parameter. For each test case, the level of $α$ is determined by k-fold cross-validation.\\\n",
         "We used the **scikit-learn** Python package to compute the LASSO-based regression coefficients."
